Fix horizontal overflow issue. Fix more styling and logic

--- a/next2/styles/globals.css
+++ b/next2/styles/globals.css
@@ -14,6 +14,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #eee;
+  overflow-x: hidden;
+
 }
 
 /* Google Font */
@@ -83,16 +85,15 @@ Button.clicked {
   border-width: 0px;
   border-radius: 16px;
   box-shadow: 3px 10px 18px -6px rgb(0 0 0 / 20%);
-  padding: 10px;
-  padding-left: 40px;
-  padding-top: 20px;
+  padding: 40px;
+  padding-bottom: 20px;
   width: 75%;   
   background-color: #fff;
   margin-bottom: 40px;
   font-size: 22px;
-  padding-top: '20px';
   display: 'inline';
   border-radius: '20px';
+  overflow: hidden;
 }
 
 .header {
